--- a/Here/templates/all-Here/here-project.html
+++ b/Here/templates/all-Here/here-project.html
@@ -16,11 +16,11 @@
      <p>{{project.project_description}}</p>
    </div>
 
-   <button><a href="{%url 'rating'%}">Rate this project</a></button>
+   <!-- <button><a href="{%url 'rating'%}">Rate this project</a></button>
    
     <P>{{design}}</P>
     <P>{{usability}}</P>
-    <P>{{content}}</P>
+    <P>{{content}}</P> -->
    
 
    <button><a href="{%url 'comments'%}">Comments</a></button>
